[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmemo-py"
version = "1.0.0"
description = "Persistent memory for AI agents — store, retrieve, and recall context across sessions."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Dr. Nadeem Shaikh", email = "nadeembyit@gmail.com" }]
keywords = ["ai", "agent", "memory", "llm", "mcp", "semantic-search", "agentmemo"]
dependencies = []

[project.optional-dependencies]
async = ["httpx>=0.24"]

[project.urls]
Homepage = "https://agentmemo.dev"
Documentation = "https://agentmemo.dev/docs"
Repository = "https://github.com/skullbase-ecom/agentmemo"

[tool.setuptools]
packages = ["agentmemo"]
